--- a/XProject/appsettings.json
+++ b/XProject/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  //"connectionstrings": {
+  //  "XProjectcontextconnection": "server=(localdb)\\mssqllocaldb;database=XProjext;trusted_connection=true;multipleactiveresultsets=true"
+  //},
+
+  "Security": {
+    "XProjectcontextconnection": "server=(localdb)\\mssqllocaldb;database=XProjext;trusted_connection=true;multipleactiveresultsets=true"
+  }
 }
