--- a/XProject/appsettings.json
+++ b/XProject/appsettings.json
@@ -13,6 +13,9 @@
   //},
 
   "Security": {
-    "XProjectcontextconnection": "server=(localdb)\\mssqllocaldb;database=XProjext;trusted_connection=true;multipleactiveresultsets=true"
+    "XProjectcontextconnection": "data source=.; initial catalog=XProjec;integrated security=true"
   }
-}
+} 
+
+
+//"XProjectcontextconnection": "server=(localdb)\\mssqllocaldb;database=XProjext;trusted_connection=true;multipleactiveresultsets=true"
